[package]
name = "repeatressbot-rust"
version = "0.1.0"
authors = ["huangwenjie <i@cirfi.com>"]

[dependencies]
# diesel database orm
diesel = { version = "1.3.3", features = ["postgres", "chrono"] }
# redis
redis = "0.9.1"
# telegram bot api
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
# telebot = {version = "0.2.10", path = "./telebot"}
# natural language detection
whatlang = "0.5.0"
# datetime
chrono = { version = "0.4.6", features = ["serde"] }
# string format
strfmt = "0.1.6"
# base
dotenv = "0.13.0"
tokio-core = "0.1.17"
futures = "0.1.24"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
